Refactor event handler configuration
- increase default Coherence server startup timeout to 60s
- document offline builds
- add+polish tests