@@ -131,8 +131,8 @@
 		<junit.version>5.7.1</junit.version>
 		<log4j.version>2.13.2</log4j.version>
 		<mockito.version>1.10.19</mockito.version>
-		<org.springframework.version>5.3.4</org.springframework.version>
-		<spring-boot.version>2.4.3</spring-boot.version>
+		<org.springframework.version>5.3.5</org.springframework.version>
+		<spring-boot.version>2.4.4</spring-boot.version>
 	</properties>
 
 	<distributionManagement>
@@ -300,7 +300,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
-					<argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
 					<includes>
 						<include>**/*FunctionalTest.java</include>
 						<include>**/*Test.java</include>
